# anomaly_detection_for_textile_industry

./: .gitignore  README.md  config.yaml  inference.py  main.py  pyproject.toml  quick-start.ipynb  quick_start.ipynb  requirements.txt
src/: __init__.py  anomaly_ead.py  anomaly_patchcore.py  anomaly_pipeline.py  anomaly_rd4ad.py  anomaly_supersimplenet.py  benchmarking.py  dataset_utils.py  eda.py  metrics.py  transfer_learning.py  utils.py  visualization.py
